--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,8 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %} -->
 
+        <p class="view">{{ site.safe_email }}</p>
+        <p class="view"><a href="{{ site.google_scholar }}">Google Scholar </a></p>
         <p class="view"><a href="{{ site.cv }}">Curriculum Vitae </a></p>
 
         {% if site.github.is_user_page %}
