--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,11 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %} -->
 
-        <p class="view">{{ site.safe_email }}</p>
-        <p class="view"><a href="{{ site.google_scholar }}">Google Scholar </a></p>
-        <p class="view"><a href="{{ site.cv }}">Curriculum Vitae </a></p>
+        <p class="view">
+          <i>{{ site.safe_email }}</i><br>
+          <a href="{{ site.google_scholar }}">Google Scholar </a><br>
+          <a href="{{ site.cv }}">Curriculum Vitae </a>
+        </p>
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
