--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -104,6 +104,11 @@ img {
   max-width:100%;
 }
 
+img.logo {
+  max-width:80%;
+  margin-bottom: 1cm;
+}
+
 header {
   width:270px;
   float:left;
