--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,10 @@
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    {% if site.favicon %}
-      <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon }}">
+    {% if site.ico_favicon %}
+      <link rel="shortcut icon" type="image/x-icon" href="{{ site.ico_favicon }}">
+    {% elsif site.png_favicon %}
+      <link rel="icon" type="image/png" href="{{ site.png_favicon }}"/>
     {% endif %}
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
