--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       <header>
         
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <img class="logo" src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
         
         <br>
