--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,12 @@
           <i>{{ site.safe_email }}</i><br>
           <a href="{{ site.google_scholar }}">Google Scholar </a><br>
           <a href="{{ site.cv }}">Curriculum Vitae </a>
+          <a href="{{ site.github }}">Github </a>
+          <a href="{{ site.gpg_public_key }}">GPG public key </a>
         </p>
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>pgp_public_key
         {% endif %}
 
         {% if site.show_downloads %}
