--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,10 +37,13 @@
 
         <p class="view">
           <i>{{ site.safe_email }}</i><br>
-          <a href="{{ site.google_scholar }}">Google Scholar </a><br>
-          <a href="{{ site.cv }}">Curriculum Vitae </a>
-          <a href="{{ site.github }}">Github </a>
-          <a href="{{ site.gpg_public_key }}">GPG public key </a>
+          {% for link in site.links %}
+            <a href="{{ link.url }}">{{ link.name }}</a><br>
+          {% endfor %}
+          <!-- <a href="{{ site.google_scholar }}">Google Scholar </a><br>
+          <a href="{{ site.cv }}">Curriculum Vitae </a><br>
+          <a href="{{ site.github }}">Github </a><br>
+          <a href="{{ site.gpg_public_key }}">GPG public key </a> -->
         </p>
 
         {% if site.github.is_user_page %}
